<resources>
    <string name="app_name">GitMobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google+ Login</string>
    <string name="text_name">Or Create an Account</string>
    <string name="text_name1">Log In</string>
    <string name="text_name2">Have an account? Log in</string>
    <string name="text_name3">Create Account</string>
    <string name="mainText">Care Team</string>
    <string name="trackTreatment">Track Treatment</string>
    <string name="lab">Lab Results</string>
</resources>
